--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-    <h2>Por<a href=" https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></h2>
+    <h2>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></h2>
     </header>
     <main>
         <article>
-          <section class="pequeno">
+          <section >
             <p>
               Estou ficando cansado<br>
               Da tal tecnologia<br>
@@ -25,7 +25,7 @@
               Vou dizer tudo em poesia.
             </p>
           </section>
-          <section class="pequeno">
+          <section class="i">
             <p class="opaco">
               Não é mais como era antes
               <br>
@@ -37,7 +37,7 @@
               E um coração desenhado.
             </p>
           </section>
-          <section class="pequeno">
+          <section >
             <p>
               Estou ficando cansado<br>
               Da tal tecnologia<br>
@@ -48,7 +48,7 @@
               Vou dizer tudo em poesia.
             </p>
           </section>
-          <section class="pequeno">
+          <section  >
             <p>
               Arroba agora não pesa<br>
               É parte de um endereço<br>
@@ -66,9 +66,9 @@
               Pra entender como fica<br>
               Decifre esse rabisco.
             </p>
-          </div>
-          <div>
-            <p class="opaco" class="pequeno" >
+          </section>
+          <section class="i">
+            <p class="opaco" >
               Tenho saudade das cartas<br>
               Escritas com a própria mão<br>
               Mandava no mês de Junho<br>
