--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               Vou dizer tudo em poesia.
             </p>
           </section>
-          <section class="i">
+          <section class="cordel">
             <p class="opaco">
               Não é mais como era antes
               <br>
@@ -67,7 +67,7 @@
               Decifre esse rabisco.
             </p>
           </section>
-          <section class="i">
+          <section class="livro">
             <p class="opaco" >
               Tenho saudade das cartas<br>
               Escritas com a própria mão<br>
@@ -102,7 +102,7 @@
         </article>
     </main>
     <footer>
-
+        <p>site criado pelo gostoso do <a href="https://github.com/GabrielDiasFelipe">GabrielDias</a>, Tmj!</p>
     </footer>
 </body>
 </html>
